[package]
name = "skia-org"

description = "Example drawings for skia-safe, mostly ported from the skia.org website."
homepage = "https://github.com/rust-skia/rust-skia"
repository = "https://github.com/rust-skia/rust-skia"
readme = "README.md"
# 5 max
keywords = ["skia", "rust-bindings", "vulkan", "opengl", "pdf"]
# 6 max
categories = ["api-bindings", "graphics", "multimedia::images", "rendering::graphics-api", "visualization"] 
license = "MIT"

version = "1.0.0"
authors = ["Armin Sander <armin@replicator.org>"]
edition = "2018"

[features]
default = []
gl = ["surfman", "gl-rs", "skia-safe/gl"]
vulkan = ["ash", "skia-safe/vulkan"]
metal = ["metal-rs", "foreign-types", "cocoa", "objc", "skia-safe/metal"]
textlayout = ["skia-safe/textlayout"]

[dependencies]
skia-safe = { path = "../skia-safe" }

clap = "2.33.0"
surfman = { version = "0.3", optional = true }
gl-rs = { package = "gl", version = "0.14", optional = true }
ash = { version = "0.31", optional = true }
# need to rename the package because of the feature with the same name.
metal-rs = { package = "metal", version = "0.17.1", optional = true }
# ... to access raw metal ptrs.
foreign-types = { version = "0.3", optional = true }
# ... for that NSAutoReleasePool to be able to free metal devices.
cocoa = { version = "0.20", optional = true }
objc = { version = "0.2.4", optional = true }